--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <body>
   <h1>Minhas Receitas</h1>
   <ul>
-    <li><a href="bolodefuba.html">Bolo de Fubá</a></li>
-    <li><a href="bolodechocolate.html">Bolo de Chocolate</a></li>
+    <li><a href="bolo_de_fuba.html">Bolo de Fubá</a></li>
+    <li><a href="bolo_de_chocolate.html">Bolo de Chocolate</a></li>
   </ul>
 </body>
 </html>
