--- a/bolo_de_chocolate.html
+++ b/bolo_de_chocolate.html
@@ -2,11 +2,14 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bolo de Chocolate</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Bolo de Chocolate</h1>
-  <p><a href="index.html">← Voltar para lista</a></p>
+  <div class="container">
+    <h1>Bolo de Chocolate</h1>
+    <p><a href="index.html">← Voltar para lista</a></p>
 
   <h2>Ingredientes</h2>
   <ul>
