--- a/bolo_de_fuba.html
+++ b/bolo_de_fuba.html
@@ -2,24 +2,28 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bolo de Fubá</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Bolo de Fubá</h1>
-  <p><a href="index.html">← Voltar para lista</a></p>
+  <div class="container">
+    <h1>Bolo de Fubá</h1>
+    <p><a href="index.html">← Voltar para lista</a></p>
 
-  <h2>Ingredientes</h2>
-  <ul>
-    <li>2 xícaras de fubá</li>
-    <li>1 xícara de farinha de trigo</li>
-    <li>1 e 1/2 xícara de açúcar</li>
-    <li>3 ovos</li>
-    <li>1 xícara de leite</li>
-    <li>1/2 xícara de óleo</li>
-    <li>1 colher de sopa de fermento em pó</li>
-  </ul>
+    <h2>Ingredientes</h2>
+    <ul>
+      <li>2 xícaras de fubá</li>
+      <li>1 xícara de farinha de trigo</li>
+      <li>1 e 1/2 xícara de açúcar</li>
+      <li>3 ovos</li>
+      <li>1 xícara de leite</li>
+      <li>1/2 xícara de óleo</li>
+      <li>1 colher de sopa de fermento em pó</li>
+    </ul>
 
-  <h2>Modo de preparo</h2>
-  <p>Misture todos os ingredientes, coloque em forma untada e leve ao forno pré-aquecido a 180°C por cerca de 40 minutos.</p>
+    <h2>Modo de preparo</h2>
+    <p>Misture todos os ingredientes, coloque em forma untada e leve ao forno pré-aquecido a 180°C por cerca de 40 minutos.</p>
+  </div>
 </body>
 </html>
