--- a/index.html
+++ b/index.html
@@ -2,13 +2,17 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Minhas Receitas</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Minhas Receitas</h1>
-  <ul>
-    <li><a href="bolo_de_fuba.html">Bolo de Fubá</a></li>
-    <li><a href="bolo_de_chocolate.html">Bolo de Chocolate</a></li>
-  </ul>
+  <div class="container">
+    <h1>Minhas Receitas</h1>
+    <ul>
+      <li><a href="bolodefuba.html">Bolo de Fubá</a></li>
+      <li><a href="bolodechocolate.html">Bolo de Chocolate</a></li>
+    </ul>
+  </div>
 </body>
 </html>
