Atualizado links no index

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <div class="container">
     <h1>Minhas Receitas</h1>
     <ul>
-      <li><a href="bolodefuba.html">Bolo de Fubá</a></li>
-      <li><a href="bolodechocolate.html">Bolo de Chocolate</a></li>
+      <li><a href="bolo_de_fuba.html">Bolo de Fubá</a></li>
+      <li><a href="bolo_de_chocolate.html">Bolo de Chocolate</a></li>
     </ul>
   </div>
 </body>
