--- a/nhoque_de_mandioca.html
+++ b/nhoque_de_mandioca.html
@@ -2,22 +2,37 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Nhoque de Mandioca</title>
   <link rel="stylesheet" href="style.css" />
+  <style>
+    input[type="number"] {
+      width: 60px;
+      padding: 4px;
+      margin-left: 10px;
+    }
+  </style>
 </head>
 <body>
   <div class="container">
     <h1>Nhoque de Mandioca</h1>
     <p><a href="index.html">← Voltar para lista</a></p>
 
+    <h2>Porções</h2>
+    <p>Receita base para <strong id="porcao-base">4</strong> porções.</p>
+    <label>
+      Quero fazer para:
+      <input type="number" id="nova-porcao" min="1" value="4" />
+      porções
+    </label>
+
     <h2>Ingredientes</h2>
-    <ul>
-      <li>1 kg de mandioca</li>
-      <li>1 ovo</li>
-      <li>1 colher (sopa) de margarina</li>
-      <li>2 xícaras de farinha de trigo</li>
-      <li>1 pitada de sal</li>
+    <ul id="ingredientes">
+      <li data-qtd="1000">1 kg de mandioca</li>
+      <li data-qtd="1">1 ovo</li>
+      <li data-qtd="1">1 colher (sopa) de margarina</li>
+      <li data-qtd="2">2 xícaras de farinha de trigo</li>
+      <li data-qtd="1">1 pitada de sal</li>
     </ul>
 
     <h2>Modo de preparo</h2>
@@ -32,5 +47,27 @@
       <li>Use o molho de sua preferência.</li>
     </ol>
   </div>
+
+  <script>
+    const basePorcoes = 4;
+    const input = document.getElementById('nova-porcao');
+    const lista = document.querySelectorAll('#ingredientes li');
+
+    input.addEventListener('input', () => {
+      const novaPorcao = parseFloat(input.value);
+      lista.forEach(li => {
+        const qtdBase = parseFloat(li.dataset.qtd);
+        if (!isNaN(qtdBase)) {
+          const novaQtd = (qtdBase * novaPorcao / basePorcoes).toFixed(2);
+          let texto = li.textContent;
+
+          // Remove qualquer número do início
+          texto = texto.replace(/^[^a-zA-Z]+/, '');
+          // Atualiza com nova quantidade
+          li.textContent = `${novaQtd} ${texto}`;
+        }
+      });
+    });
+  </script>
 </body>
 </html>
