separacao pasta receitas

--- a/receitas/nhoque_de_mandioca.html
+++ b/receitas/nhoque_de_mandioca.html
@@ -57,6 +57,6 @@
     <li>Usar o molho de sua preferência.</li>
   </ol>
 
-  <script src="calculadora.js"></script>
+  <script src="../calculadora.js"></script>
 </body>
 </html>
