--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <div class="container">
     <h1>Minhas Receitas</h1>
     <ul>
-      <li><a href="../receitas/nhoque_de_mandioca.html">Nhoque de Mandioca</a></li>
-      <li><a href="../receitas/bolo_de_chocolate.html">Bolo de Chocolate</a></li>
-      <li><a href="../receitas/bolo_de_fuba.html">Bolo de Fubá</a></li>
+      <li><a href="receitas/nhoque_de_mandioca.html">Nhoque de Mandioca</a></li>
+      <li><a href="receitas/bolo_de_chocolate.html">Bolo de Chocolate</a></li>
+      <li><a href="receitas/bolo_de_fuba.html">Bolo de Fubá</a></li>
     </ul>
   </div>
 </body>
