--- a/receitas/nhoque_de_mandioca.html
+++ b/receitas/nhoque_de_mandioca.html
@@ -32,8 +32,8 @@
 
   <p>
     <label for="porcoes">Porções:</label>
-    <input type="number" id="porcoes" value="3" min="1" />
-    <span id="porcao-base">(base da receita: 3 porções)</span>
+    <input type="number" id="porcoes" value="4" min="1" data-base="4" />
+    <span id="porcao-base">(base da receita: 4 porções)</span>
   </p>
 
   <h2>Ingredientes</h2>
