--- a/receitas/nhoque_de_mandioca.html
+++ b/receitas/nhoque_de_mandioca.html
@@ -4,45 +4,25 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Nhoque de Mandioca</title>
-  <style>
-    body {
-      font-family: sans-serif;
-      max-width: 600px;
-      margin: auto;
-      padding: 1em;
-      background-color: #fffef5;
-    }
-    h1 {
-      color: #8B4513;
-    }
-    label {
-      font-weight: bold;
-    }
-    input[type="number"] {
-      width: 60px;
-      margin-left: 0.5em;
-    }
-    ul, ol {
-      padding-left: 1.5em;
-    }
-  </style>
+  <link rel="stylesheet" href="../style.css" />
 </head>
 <body>
   <h1>Nhoque de Mandioca</h1>
+  <p><a href="../index.html">← Voltar para lista</a></p>
 
   <p>
     <label for="porcoes">Porções:</label>
-    <input type="number" id="porcoes" value="4" min="1" data-base="4" />
+    <input type="number" id="porcoes" value="4" min="1" data-base="4" onkeydown="return false;" /> 
     <span id="porcao-base">(base da receita: 4 porções)</span>
   </p>
 
   <h2>Ingredientes</h2>
   <ul>
-    <li><span class="qtd" data-qtd="1" data-unidade="kg">1</span> kg de mandioca</li>
-    <li><span class="qtd" data-qtd="1" data-unidade="">1</span> ovo</li>
-    <li><span class="qtd" data-qtd="1" data-unidade="colher (sopa)">1</span> colher (sopa) de margarina</li>
-    <li><span class="qtd" data-qtd="2" data-unidade="xícaras">2</span> xícaras de farinha de trigo</li>
-    <li><span class="qtd" data-qtd="1" data-unidade="pitada">1</span> pitada de sal</li>
+    <li><span class="qtd" data-qtd="1">1</span> kg de mandioca</li>
+    <li><span class="qtd" data-qtd="1">1</span> ovo</li>
+    <li><span class="qtd" data-qtd="1">1</span> colher (sopa) de margarina</li>
+    <li><span class="qtd" data-qtd="2">2</span> xícaras de farinha de trigo</li>
+    <li><span class="qtd" data-qtd="1">1</span> pitada de sal</li>
   </ul>
 
   <h2>Modo de Preparo</h2>
