--- a/receitas/nhoque_de_mandioca.html
+++ b/receitas/nhoque_de_mandioca.html
@@ -12,7 +12,7 @@
 
   <p>
     <label for="porcoes">Porções:</label>
-    <input type="number" id="porcoes" value="4" min="1" data-base="4" onkeydown="return false;" /> 
+    <input type="number" id="porcoes" value="4" min="0" step="1" data-base="4" />
     <span id="porcao-base">(base da receita: 4 porções)</span>
   </p>
 
