--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <div class="container">
     <h1>Minhas Receitas</h1>
     <ul>
+      <li><a href="receitas/massa_de_pizza.html">Massa de Pizza</a></li>
       <li><a href="receitas/nhoque_de_mandioca.html">Nhoque de Mandioca</a></li>
       <li><a href="receitas/tortilla.html">Tortilla</a></li>
     </ul>
