--- a/receitas/massa_de_pizza.html
+++ b/receitas/massa_de_pizza.html
@@ -12,7 +12,7 @@
 
   <p>
     <label for="porcoes">Porções:</label>
-    <input type="number" id="porcoes" value="2" min="1" data-base="2" onkeydown="return false;" /> 
+    <input type="number" id="porcoes" value="2" min="1" data-base="2" /> 
     <span id="porcao-base">(base da receita: 2 porções)</span> 
   </p>
 
