--- a/receitas/massa_de_pizza.html
+++ b/receitas/massa_de_pizza.html
@@ -27,9 +27,9 @@
 
   <h2>Modo de Preparo</h2>
   <ol>
-    <li>Misturar todos os ingredientes até que a massa fique uniforme e não grudenta.</li>
-    <li>Dividir a massa em 2 porções.</li>
-    <li>Esticar a massa com um rolo.</li>
+    <li>Misture todos os ingredientes até que a massa fique uniforme e não grudenta.</li>
+    <li>Divida a massa em 2 porções.</li>
+    <li>Estique a massa com um rolo.</li>
   </ol>
 
   <script src="../calculadora.js"></script>
