--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <ul>
       <li><a href="receitas/massa_de_pizza.html">Massa de Pizza</a></li>
       <li><a href="receitas/nhoque_de_mandioca.html">Nhoque de Mandioca</a></li>
+      <li><a href="receitas/pao_caseiro.html">Pão caseiro</a></li>
       <li><a href="receitas/tortilla.html">Tortilla</a></li>
     </ul>
   </div>
