--- a/receitas/esfiha_de_carne.html
+++ b/receitas/esfiha_de_carne.html
@@ -12,7 +12,7 @@
 
   <p>
     <label for="porcoes">Porções:</label>
-    <input type="number" id="porcoes" value="1" min="1" data-base="20" /> 
+    <input type="number" id="porcoes" value="20" min="1" data-base="20"/> 
     <span id="porcao-base">(base da receita: 20 porções)</span> 
   </p>
 
@@ -26,7 +26,7 @@
     <li><span class="qtd" data-qtd="2">2</span> colheres de sopa de margarina</li>
     <li><span class="qtd" data-qtd="1">1</span> colher de sopa de açúcar</li>
     <li><span class="qtd" data-qtd="1.5">1.5</span> colher de sopa de sal</li>
-    <li><span class="qtd" data-qtd="10">10</span> g de fermento seco</li>
+    <li><span class="qtd" data-qtd="0">0</span> g de fermento seco</li>
   </ul>
 
     <h3>Recheio de carne</h3>
@@ -35,7 +35,7 @@
     <li><span class="qtd" data-qtd="1">1</span> tomate grande picado</li>
     <li><span class="qtd" data-qtd="1">1</span> cebola picada</li>
     <li><span class="qtd" data-qtd="2">2</span> limões taiti</li>
-    <li><span class="qtd" data-qtd=""></span> sal a gosto</li>
+    <li><span class="qtd" data-qtd="-">-</span> sal a gosto</li>
   </ul>
 
 
