--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="container">
     <h1>Minhas Receitas</h1>
     <ul>
-      <li><a href="receitas/esfiha_de_carne.html"></a>Esfiha de Carne</li>
+      <li><a href="receitas/esfiha_de_carne.html">Esfiha de Carne</a></li>
       <li><a href="receitas/massa_de_pizza.html">Massa de Pizza</a></li>
       <li><a href="receitas/nhoque_de_mandioca.html">Nhoque de Mandioca</a></li>
       <li><a href="receitas/pao_caseiro.html">Pão caseiro</a></li>
