--- a/receitas/esfiha_de_carne.html
+++ b/receitas/esfiha_de_carne.html
@@ -35,7 +35,7 @@
     <li><span class="qtd" data-qtd="1">1</span> tomate grande picado</li>
     <li><span class="qtd" data-qtd="1">1</span> cebola picada</li>
     <li><span class="qtd" data-qtd="2">2</span> limões taiti</li>
-    <li><span class="qtd" data-qtd="-">-</span> sal a gosto</li>
+    <li><span class="qtd" data-qtd="0">0</span> sal a gosto</li>
   </ul>
 
 
