--- a/receitas/massa_de_pizza.html
+++ b/receitas/massa_de_pizza.html
@@ -19,8 +19,8 @@
   <h2>Ingredientes</h2>
   <ul>
     <li><span class="qtd" data-qtd="220">220</span> ml de água</li>
-    <li><span class="qtd" data-qtd="1/2">1/1</span> colher de chá de sal</li>
-    <li><span class="qtd" data-qtd="1 1/3">1 1/3</span> colher de chá de fermento</li>
+    <li><span class="qtd" data-qtd="0.5">0.5</span> colher de chá de sal</li>
+    <li><span class="qtd" data-qtd="1.33">1.33</span> colher de chá de fermento</li>
     <li><span class="qtd" data-qtd="2">2</span> colher de sopa de azeite</li>
     <li><span class="qtd" data-qtd="640">640</span> ml de farinha de trigo</li>
   </ul>
